Add functions list checker

--- a/notebooks/utils/bigquery_connector.ipynb
+++ b/notebooks/utils/bigquery_connector.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f644136c",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "'\\n# BigQuery Connector Utility Class\\n\\nThis notebook contains the main BigQueryConnector class.\\nImport this notebook into other notebooks using: %run utils/bigquery_connector.ipynb\\n'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "bdf3f6ba",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,10 @@
     "from google.cloud import bigquery\n",
     "from typing import List, Optional\n",
     "from IPython.display import display, HTML\n",
-    "import json"
+    "import json\n",
+    "import inspect\n",
+    "import types\n",
+    "import sys"
    ]
   },
   {
@@ -68,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a270078b",
    "metadata": {},
    "outputs": [],
@@ -395,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ff9baf40",
    "metadata": {},
    "outputs": [],
@@ -526,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b5296b8f",
    "metadata": {},
    "outputs": [
@@ -584,6 +587,58 @@
     "print(\"✓ Ready to use: bq = BigQueryConnector()\")\n",
     "print(\"✓ Available helper functions: display_query_results, save_query_result, quick_data_profile\")\n",
     "print(\"✓ Utility functions: setup_environment_check, create_sample_queries, format_sql_query\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b7305640",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🎯 METHOD 2: Filter only custom methods\n",
+      "==================================================\n",
+      "Custom methods in BigQueryConnector:\n",
+      "   1. __init__\n",
+      "   2. count_rows\n",
+      "   3. export_table_to_csv\n",
+      "   4. get_column_stats\n",
+      "   5. get_table_info\n",
+      "   6. get_table_schema\n",
+      "   7. get_tables\n",
+      "   8. list_datasets\n",
+      "   9. query_data\n",
+      "  10. quick_query\n",
+      "  11. search_tables\n",
+      "  12. test_connection\n",
+      "  13. validate_query\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n🎯 METHOD 2: Filter only custom methods\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "def get_custom_methods(obj_or_class):\n",
+    "    \"\"\"Get only custom methods (exclude Python internal methods)\"\"\"\n",
+    "    methods = []\n",
+    "    for name in dir(obj_or_class):\n",
+    "        # Skip internal Python methods (yang dimulai dan diakhiri __)\n",
+    "        if not name.startswith('_') or name in ['__init__']:\n",
+    "            attr = getattr(obj_or_class, name)\n",
+    "            if callable(attr):  # Check if it's a method/function\n",
+    "                methods.append(name)\n",
+    "    return methods\n",
+    "\n",
+    "# Dari class\n",
+    "custom_methods = get_custom_methods(BigQueryConnector)\n",
+    "print(\"Custom methods in BigQueryConnector:\")\n",
+    "for i, method in enumerate(custom_methods, 1):\n",
+    "    print(f\"  {i:2d}. {method}\")\n"
    ]
   }
  ],
