Add get data from table

--- a/notebooks/02_data_exploration.ipynb
+++ b/notebooks/02_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "ae5e664d",
    "metadata": {},
    "outputs": [
@@ -14,6 +14,27 @@
       "✓ Ready to use: bq = BigQueryConnector()\n",
       "✓ Available helper functions: display_query_results, save_query_result, quick_data_profile\n",
       "✓ Utility functions: setup_environment_check, create_sample_queries, format_sql_query\n",
+      "\n",
+      "🎯 METHOD 2: Filter only custom methods\n",
+      "==================================================\n",
+      "Custom methods in BigQueryConnector:\n",
+      "   1. __init__\n",
+      "   2. count_rows\n",
+      "   3. explore_table_by_index\n",
+      "   4. export_table_to_csv\n",
+      "   5. extract_table_data\n",
+      "   6. get_column_stats\n",
+      "   7. get_table_info\n",
+      "   8. get_table_schema\n",
+      "   9. get_tables\n",
+      "  10. list_datasets\n",
+      "  11. query_data\n",
+      "  12. quick_query\n",
+      "  13. search_tables\n",
+      "  14. select_table_by_index\n",
+      "  15. select_table_by_number\n",
+      "  16. test_connection\n",
+      "  17. validate_query\n",
       "✓ Credentials loaded from: C:\\Users\\prada\\Documents\\Latihan\\Project_Github\\connect-to-gcs\\config\\credentials\\asikngulik-analytics-cb7cf888258f.json\n",
       "✓ BigQuery client initialized for project: asikngulik-analytics\n"
      ]
@@ -40,22 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "24b31ba0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🗂️ Exploring available datasets...\n",
-      "📁 PROJECT: asikngulik-analytics\n",
-      "📂 Available datasets (2):\n",
-      "   1. thelook                        (9 tables)\n",
-      "   2. visitor_data                   (1 tables)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell 2: Explore datasets\n",
     "print(\"🗂️ Exploring available datasets...\")\n",
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "06f4d3f4",
    "metadata": {},
    "outputs": [
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "ff95a05b",
    "metadata": {},
    "outputs": [
@@ -245,13 +254,284 @@
        "Table(TableReference(DatasetReference('asikngulik-analytics', 'thelook'), 'distribution_centers'))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bq.get_table_info('distribution_centers')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a32c6d4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['distribution_centers',\n",
+       " 'events',\n",
+       " 'inventory_items',\n",
+       " 'lookerstudio_report_distribution_centers',\n",
+       " 'lookerstudio_report_profit',\n",
+       " 'order_items',\n",
+       " 'orders',\n",
+       " 'products',\n",
+       " 'users']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5870c0c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔄 Extracting data from table: events\n",
+      "🔄 Executing query...\n",
+      "✓ Query executed successfully\n",
+      "📊 Rows returned: 2,434,263\n",
+      "📋 Columns: 13\n",
+      "💾 Memory usage: 1373.43 MB\n",
+      "✅ Successfully extracted 2,434,263 rows from events\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>sequence_number</th>\n",
+       "      <th>session_id</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>ip_address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>browser</th>\n",
+       "      <th>traffic_source</th>\n",
+       "      <th>uri</th>\n",
+       "      <th>event_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>242523</td>\n",
+       "      <td>18564</td>\n",
+       "      <td>6</td>\n",
+       "      <td>24cf771e-aa76-4d04-865c-eabc42cc86cf</td>\n",
+       "      <td>2022-03-02 08:55:17+00:00</td>\n",
+       "      <td>78.26.63.34</td>\n",
+       "      <td>Bogatynia</td>\n",
+       "      <td>Dolnośląskie</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Safari</td>\n",
+       "      <td>Adwords</td>\n",
+       "      <td>/cart</td>\n",
+       "      <td>cart</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>988394</td>\n",
+       "      <td>75592</td>\n",
+       "      <td>6</td>\n",
+       "      <td>71c6b58f-bcae-4fd4-a25d-2bc291de7e10</td>\n",
+       "      <td>2019-11-19 04:59:43+00:00</td>\n",
+       "      <td>193.53.213.162</td>\n",
+       "      <td>Bogatynia</td>\n",
+       "      <td>Dolnośląskie</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Safari</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>/cart</td>\n",
+       "      <td>cart</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1470472</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>3</td>\n",
+       "      <td>da64b684-7913-467c-af4a-86008c319663</td>\n",
+       "      <td>2021-06-30 05:26:00+00:00</td>\n",
+       "      <td>174.248.233.220</td>\n",
+       "      <td>Bogatynia</td>\n",
+       "      <td>Dolnośląskie</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Chrome</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>/cart</td>\n",
+       "      <td>cart</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>852269</td>\n",
+       "      <td>65210</td>\n",
+       "      <td>6</td>\n",
+       "      <td>f11ccafd-e17e-4b32-991a-cceb9ed43f3a</td>\n",
+       "      <td>2021-02-09 10:32:10+00:00</td>\n",
+       "      <td>116.64.203.47</td>\n",
+       "      <td>Bogatynia</td>\n",
+       "      <td>Dolnośląskie</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Firefox</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>/cart</td>\n",
+       "      <td>cart</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1520965</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>3</td>\n",
+       "      <td>a3ab1265-d29f-428f-84da-92dbd773005b</td>\n",
+       "      <td>2020-10-07 07:57:00+00:00</td>\n",
+       "      <td>74.46.42.136</td>\n",
+       "      <td>Bogatynia</td>\n",
+       "      <td>Dolnośląskie</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Safari</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>/cart</td>\n",
+       "      <td>cart</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  user_id  sequence_number                            session_id  \\\n",
+       "0   242523    18564                6  24cf771e-aa76-4d04-865c-eabc42cc86cf   \n",
+       "1   988394    75592                6  71c6b58f-bcae-4fd4-a25d-2bc291de7e10   \n",
+       "2  1470472     <NA>                3  da64b684-7913-467c-af4a-86008c319663   \n",
+       "3   852269    65210                6  f11ccafd-e17e-4b32-991a-cceb9ed43f3a   \n",
+       "4  1520965     <NA>                3  a3ab1265-d29f-428f-84da-92dbd773005b   \n",
+       "\n",
+       "                 created_at       ip_address       city         state  \\\n",
+       "0 2022-03-02 08:55:17+00:00      78.26.63.34  Bogatynia  Dolnośląskie   \n",
+       "1 2019-11-19 04:59:43+00:00   193.53.213.162  Bogatynia  Dolnośląskie   \n",
+       "2 2021-06-30 05:26:00+00:00  174.248.233.220  Bogatynia  Dolnośląskie   \n",
+       "3 2021-02-09 10:32:10+00:00    116.64.203.47  Bogatynia  Dolnośląskie   \n",
+       "4 2020-10-07 07:57:00+00:00     74.46.42.136  Bogatynia  Dolnośląskie   \n",
+       "\n",
+       "  postal_code  browser traffic_source    uri event_type  \n",
+       "0          59   Safari        Adwords  /cart       cart  \n",
+       "1          59   Safari          Email  /cart       cart  \n",
+       "2          59   Chrome          Email  /cart       cart  \n",
+       "3          59  Firefox          Email  /cart       cart  \n",
+       "4          59   Safari          Email  /cart       cart  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_event = bq.extract_table_data('events')\n",
+    "df_event.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "291ea44d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2434263 entries, 0 to 2434262\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column           Dtype              \n",
+      "---  ------           -----              \n",
+      " 0   id               Int64              \n",
+      " 1   user_id          Int64              \n",
+      " 2   sequence_number  Int64              \n",
+      " 3   session_id       object             \n",
+      " 4   created_at       datetime64[us, UTC]\n",
+      " 5   ip_address       object             \n",
+      " 6   city             object             \n",
+      " 7   state            object             \n",
+      " 8   postal_code      object             \n",
+      " 9   browser          object             \n",
+      " 10  traffic_source   object             \n",
+      " 11  uri              object             \n",
+      " 12  event_type       object             \n",
+      "dtypes: Int64(3), datetime64[us, UTC](1), object(9)\n",
+      "memory usage: 248.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_event.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "789d69f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "city\n",
+       "Shanghai    61958\n",
+       "Beijing     51099\n",
+       "Seoul       35050\n",
+       "Shenzhen    30641\n",
+       "null        23594\n",
+       "Dongguan    22029\n",
+       "New York    20796\n",
+       "Tokyo       20762\n",
+       "Chengdu     20207\n",
+       "Foshan      19162\n",
+       "Name: city, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_event.groupby('city')['city'].count().sort_values(ascending=False).head(10)"
    ]
   }
  ],
