--- a/notebooks/utils/bigquery_connector.ipynb
+++ b/notebooks/utils/bigquery_connector.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "f644136c",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "'\\n# BigQuery Connector Utility Class\\n\\nThis notebook contains the main BigQueryConnector class.\\nImport this notebook into other notebooks using: %run utils/bigquery_connector.ipynb\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "bdf3f6ba",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "a270078b",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,155 @@
     "    \n",
     "    def validate_query(self, query: str) -> bool:\n",
     "        \"\"\"Validate SQL query syntax without executing\"\"\"\n",
-    "        return self.query_data(query, dry_run=True) is not None"
+    "        return self.query_data(query, dry_run=True) is not None\n",
+    "    \n",
+    "    def select_table_by_index(self, index: int) -> Optional[str]:\n",
+    "        \"\"\"Select table by index (0-based)\"\"\"\n",
+    "        try:\n",
+    "            tables = self.get_tables()\n",
+    "            if 0 <= index < len(tables):\n",
+    "                selected_table = tables[index]\n",
+    "                print(f\"✅ Selected table at index {index}: {selected_table}\")\n",
+    "                return selected_table\n",
+    "            else:\n",
+    "                print(f\"❌ Index {index} out of range. Available: 0-{len(tables)-1}\")\n",
+    "                return None\n",
+    "        except Exception as e:\n",
+    "            print(f\"✗ Failed to select table: {e}\")\n",
+    "            return None\n",
+    "    \n",
+    "    def select_table_by_number(self, number: int) -> Optional[str]:\n",
+    "        \"\"\"Select table by display number (1-based)\"\"\"\n",
+    "        try:\n",
+    "            tables = self.get_tables()\n",
+    "            if 1 <= number <= len(tables):\n",
+    "                selected_table = tables[number - 1]  # Convert to 0-based index\n",
+    "                print(f\"✅ Selected table #{number}: {selected_table}\")\n",
+    "                return selected_table\n",
+    "            else:\n",
+    "                print(f\"❌ Invalid number. Choose between 1-{len(tables)}\")\n",
+    "                return None\n",
+    "        except Exception as e:\n",
+    "            print(f\"✗ Failed to select table: {e}\")\n",
+    "            return None\n",
+    "    \n",
+    "    def explore_table_by_index(self, index: int):\n",
+    "        \"\"\"Select and explore table by index in one go\"\"\"\n",
+    "        selected_table = self.select_table_by_index(index)\n",
+    "        if selected_table:\n",
+    "            print(f\"\\n🔍 Exploring table: {selected_table}\")\n",
+    "            self.get_table_info(selected_table)\n",
+    "            sample_df = self.quick_query(selected_table, limit=5)\n",
+    "            if sample_df is not None:\n",
+    "                display(sample_df)\n",
+    "        return selected_table\n",
+    "    \n",
+    "    def extract_table_data(self, table_name: str, \n",
+    "                          columns: list = None, \n",
+    "                          where_clause: str = None, \n",
+    "                          order_by: str = None, \n",
+    "                          limit: int = None,\n",
+    "                          sample_percent: float = None) -> Optional[pd.DataFrame]:\n",
+    "        \"\"\"\n",
+    "        Extract data from a single table with flexible options\n",
+    "        \n",
+    "        Args:\n",
+    "            table_name (str): Name of the table to extract from\n",
+    "            columns (list): List of columns to select (default: all columns)\n",
+    "            where_clause (str): WHERE condition (without 'WHERE' keyword)\n",
+    "            order_by (str): ORDER BY clause (without 'ORDER BY' keyword)\n",
+    "            limit (int): Maximum number of rows to return\n",
+    "            sample_percent (float): Percentage of data to sample (0.1 = 10%)\n",
+    "        \n",
+    "        Returns:\n",
+    "            pd.DataFrame: Extracted data or None if failed\n",
+    "            \n",
+    "        Examples:\n",
+    "            # Extract all data\n",
+    "            df = bq.extract_table_data('customers')\n",
+    "            \n",
+    "            # Extract specific columns\n",
+    "            df = bq.extract_table_data('customers', columns=['id', 'name', 'email'])\n",
+    "            \n",
+    "            # Extract with conditions\n",
+    "            df = bq.extract_table_data('orders', \n",
+    "                                     where_clause=\"status = 'completed' AND amount > 100\",\n",
+    "                                     order_by=\"created_at DESC\",\n",
+    "                                     limit=1000)\n",
+    "            \n",
+    "            # Extract sample data\n",
+    "            df = bq.extract_table_data('large_table', sample_percent=1.0)\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            if not self.dataset_id:\n",
+    "                print(\"⚠️ DATASET_ID not configured\")\n",
+    "                return None\n",
+    "            \n",
+    "            # Build SELECT clause\n",
+    "            if columns:\n",
+    "                # Validate column names (simple check)\n",
+    "                clean_columns = [col.strip() for col in columns]\n",
+    "                select_clause = \", \".join(clean_columns)\n",
+    "            else:\n",
+    "                select_clause = \"*\"\n",
+    "            \n",
+    "            # Build FROM clause\n",
+    "            from_clause = f\"`{self.project_id}.{self.dataset_id}.{table_name}`\"\n",
+    "            \n",
+    "            # Add TABLESAMPLE if sample_percent provided\n",
+    "            if sample_percent:\n",
+    "                if 0 < sample_percent <= 100:\n",
+    "                    from_clause += f\" TABLESAMPLE SYSTEM ({sample_percent} PERCENT)\"\n",
+    "                else:\n",
+    "                    print(\"⚠️ sample_percent must be between 0 and 100\")\n",
+    "                    return None\n",
+    "            \n",
+    "            # Build WHERE clause\n",
+    "            where_part = f\"WHERE {where_clause}\" if where_clause else \"\"\n",
+    "            \n",
+    "            # Build ORDER BY clause\n",
+    "            order_part = f\"ORDER BY {order_by}\" if order_by else \"\"\n",
+    "            \n",
+    "            # Build LIMIT clause\n",
+    "            limit_part = f\"LIMIT {limit}\" if limit else \"\"\n",
+    "            \n",
+    "            # Construct final query\n",
+    "            query = f\"\"\"\n",
+    "                SELECT {select_clause}\n",
+    "                FROM {from_clause}\n",
+    "                {where_part}\n",
+    "                {order_part}\n",
+    "                {limit_part}\n",
+    "            \"\"\".strip()\n",
+    "            \n",
+    "            print(f\"🔄 Extracting data from table: {table_name}\")\n",
+    "            if where_clause:\n",
+    "                print(f\"📋 Filter: {where_clause}\")\n",
+    "            if columns:\n",
+    "                print(f\"📊 Columns: {len(columns)} selected\")\n",
+    "            if limit:\n",
+    "                print(f\"📏 Limit: {limit:,} rows\")\n",
+    "            if sample_percent:\n",
+    "                print(f\"🎲 Sample: {sample_percent}%\")\n",
+    "            \n",
+    "            # Execute query\n",
+    "            df = self.query_data(query)\n",
+    "            \n",
+    "            if df is not None:\n",
+    "                print(f\"✅ Successfully extracted {len(df):,} rows from {table_name}\")\n",
+    "                \n",
+    "                # Show column info if specific columns selected\n",
+    "                if columns and len(df) > 0:\n",
+    "                    print(f\"📋 Extracted columns: {list(df.columns)}\")\n",
+    "                \n",
+    "                return df\n",
+    "            else:\n",
+    "                print(f\"❌ Failed to extract data from {table_name}\")\n",
+    "                return None\n",
+    "                \n",
+    "        except Exception as e:\n",
+    "            print(f\"✗ Error extracting data from {table_name}: {e}\")\n",
+    "            return None"
    ]
   },
   {
@@ -398,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "ff9baf40",
    "metadata": {},
    "outputs": [],
@@ -529,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "b5296b8f",
    "metadata": {},
    "outputs": [
@@ -591,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "b7305640",
    "metadata": {},
    "outputs": [
