Add outline in 02_data_exploration.ipynb

--- a/notebooks/utils/bigquery_connector.ipynb
+++ b/notebooks/utils/bigquery_connector.ipynb
@@ -10,10 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f644136c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n# BigQuery Connector Utility Class\\n\\nThis notebook contains the main BigQueryConnector class.\\nImport this notebook into other notebooks using: %run utils/bigquery_connector.ipynb\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Cell 1: Class Definition\n",
     "\"\"\"\n",
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bdf3f6ba",
    "metadata": {},
    "outputs": [],
@@ -60,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a270078b",
    "metadata": {},
    "outputs": [],
@@ -535,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ff9baf40",
    "metadata": {},
    "outputs": [],
@@ -666,10 +677,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b5296b8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ BigQueryConnector class and helper functions loaded!\n",
+      "✓ Ready to use: bq = BigQueryConnector()\n",
+      "✓ Available helper functions: display_query_results, save_query_result, quick_data_profile\n",
+      "✓ Utility functions: setup_environment_check, create_sample_queries, format_sql_query\n"
+     ]
+    }
+   ],
    "source": [
     "# Cell 5: Utility Functions for BigQuery Operations\n",
     "def setup_environment_check():\n",
@@ -717,10 +739,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b7305640",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🎯 METHOD 2: Filter only custom methods\n",
+      "==================================================\n",
+      "Custom methods in BigQueryConnector:\n",
+      "   1. __init__\n",
+      "   2. count_rows\n",
+      "   3. explore_table_by_index\n",
+      "   4. export_table_to_csv\n",
+      "   5. extract_table_data\n",
+      "   6. get_column_stats\n",
+      "   7. get_table_info\n",
+      "   8. get_table_schema\n",
+      "   9. get_tables\n",
+      "  10. list_datasets\n",
+      "  11. query_data\n",
+      "  12. quick_query\n",
+      "  13. search_tables\n",
+      "  14. select_table_by_index\n",
+      "  15. select_table_by_number\n",
+      "  16. test_connection\n",
+      "  17. validate_query\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n🎯 METHOD 2: Filter only custom methods\")\n",
     "print(\"=\"*50)\n",
