--- a/notebooks/02_data_exploration.ipynb
+++ b/notebooks/02_data_exploration.ipynb
@@ -1,11 +1,63 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4b558f69",
+   "metadata": {},
+   "source": [
+    "# 1. Configuration"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ae5e664d",
+   "execution_count": 13,
+   "id": "7a6cf6e6",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ae5e664d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ BigQueryConnector class and helper functions loaded!\n",
+      "✓ Ready to use: bq = BigQueryConnector()\n",
+      "✓ Available helper functions: display_query_results, save_query_result, quick_data_profile\n",
+      "✓ Utility functions: setup_environment_check, create_sample_queries, format_sql_query\n",
+      "\n",
+      "🎯 METHOD 2: Filter only custom methods\n",
+      "==================================================\n",
+      "Custom methods in BigQueryConnector:\n",
+      "   1. __init__\n",
+      "   2. count_rows\n",
+      "   3. explore_table_by_index\n",
+      "   4. export_table_to_csv\n",
+      "   5. extract_table_data\n",
+      "   6. get_column_stats\n",
+      "   7. get_table_info\n",
+      "   8. get_table_schema\n",
+      "   9. get_tables\n",
+      "  10. list_datasets\n",
+      "  11. query_data\n",
+      "  12. quick_query\n",
+      "  13. search_tables\n",
+      "  14. select_table_by_index\n",
+      "  15. select_table_by_number\n",
+      "  16. test_connection\n",
+      "  17. validate_query\n",
+      "✓ Credentials loaded from: C:\\Users\\prada\\Documents\\Latihan\\Project_Github\\connect-to-gcs\\config\\credentials\\asikngulik-analytics-cb7cf888258f.json\n",
+      "✓ BigQuery client initialized for project: asikngulik-analytics\n"
+     ]
+    }
+   ],
    "source": [
     "# Cell 1: Setup\n",
     "\"\"\"\n",
@@ -26,85 +78,133 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24b31ba0",
+   "cell_type": "markdown",
+   "id": "d7726a40",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Cell 2: Explore datasets\n",
-    "print(\"🗂️ Exploring available datasets...\")\n",
-    "datasets = bq.list_datasets()"
+    "# 2. List Method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "732b61c9",
+   "metadata": {},
+   "source": [
+    "## 2.1 `bq.list_datasets()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "06f4d3f4",
+   "execution_count": 19,
+   "id": "07fd6d23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📁 PROJECT: asikngulik-analytics\n",
+      "📂 Available datasets (2):\n",
+      "   1. thelook                        (9 tables)\n",
+      "   2. visitor_data                   (1 tables)\n",
+      "Available datasets: ['thelook', 'visitor_data']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Cell 3: Explore tables in current dataset\n",
-    "if bq.dataset_id:\n",
-    "    print(f\"📋 Exploring tables in dataset: {bq.dataset_id}\")\n",
-    "    tables = bq.get_tables()\n",
-    "    \n",
-    "    # Create interactive table selector\n",
-    "    if tables:\n",
-    "        print(\"\\n🎯 Select a table to explore:\")\n",
-    "        for i, table in enumerate(tables, 1):\n",
-    "            print(f\"  {i}. {table}\")\n"
+    "list_datasets = bq.list_datasets()\n",
+    "print(f\"Available datasets: {list_datasets}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8adfc71",
+   "metadata": {},
+   "source": [
+    "## 2.2 `bq.test_connection()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ff95a05b",
+   "execution_count": 20,
+   "id": "de26906e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Connection successful!\n",
+      "📅 Server time: 2025-06-09 13:16:20.425912\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bq.get_table_info('distribution_centers')"
+    "bq.test_connection()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6721368f",
+   "metadata": {},
+   "source": [
+    "## 2.3 `get_tables()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a32c6d4c",
+   "execution_count": 23,
+   "id": "b415c0e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Dataset: thelook\n",
+      "📋 Available tables (9):\n",
+      "   1. distribution_centers\n",
+      "   2. events\n",
+      "   3. inventory_items\n",
+      "   4. lookerstudio_report_distribution_centers\n",
+      "   5. lookerstudio_report_profit\n",
+      "   6. order_items\n",
+      "   7. orders\n",
+      "   8. products\n",
+      "   9. users\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['distribution_centers',\n",
+       " 'events',\n",
+       " 'inventory_items',\n",
+       " 'lookerstudio_report_distribution_centers',\n",
+       " 'lookerstudio_report_profit',\n",
+       " 'order_items',\n",
+       " 'orders',\n",
+       " 'products',\n",
+       " 'users']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5870c0c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_event = bq.extract_table_data('events')\n",
-    "df_event.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "291ea44d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_event.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "789d69f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_event.groupby('city')['city'].count().sort_values(ascending=False).head(10)"
+    "bq.get_tables()"
    ]
   }
  ],
